# Switch_Client_alpha_01

./: .gitignore  README.md
SwitchLite/: README.md  build.gradle.kts  settings.gradle.kts
SwitchLite/adapter/common/module/combat/: Velocity.kt
SwitchLite/agent/: build.gradle.kts
SwitchLite/agent/src/main/java/io/switchlite/agent/: Agent.java  MappingContext.java  MappingLoader.java  Transformer.java
SwitchLite/config/: battle_insight.json  default_aim.json  default_velocity.json
SwitchLite/config/presets/: aggressive.json
SwitchLite/core/src/main/kotlin/io/switchlite/core/: SwitchCore.kt
SwitchLite/docs/: ARCHITECTURE.md  CONSTITUTION.md
SwitchLite/injector/: CMakeLists.txt
SwitchLite/injector/src/: inject.cpp  inject.h  main.cpp  process.cpp  process.h  version.cpp  version.h
SwitchLite/mappings/fabric/: v1_20_1.json
SwitchLite/mappings/fabric/deltas/: v1_20_2.json
SwitchLite/mappings/forge/: v1_8_9.json
SwitchLite/scripts/: generate_mappings.py
adapter/fabric/common/: build.gradle.kts
adapter/fabric/v1_20/: build.gradle.kts
adapter/fabric/v1_21/: build.gradle.kts
adapter/forge/v1_8_9/: build.gradle.kts
config/presets/: invisible.json  seasoned.json
core/: build.gradle.kts
core/src/main/kotlin/io/switchlite/core/: SwitchCore.kt
core/src/main/kotlin/io/switchlite/core/algorithm/: GaussianNoise.kt  NoiseProvider.kt  RotationCalculator.kt  VectorOperations.kt
mappings/fabric/: v1_21.json
mappings/fabric/deltas/: v1_20_2.json
mappings/forge/: v1_8_9.json
scripts/: generate_mappings.py
(+107 files in other folders)
